<?xml version="1.0"?>
<package>
  <name>p3at_tutorial</name>
  <version>0.0.0</version>
  <description>Package demo for ROS navigation in Gazebo usingo Pioneer 3AT.</description>

  <maintainer email="gabriel.araujo.5000@gmail.com">Gabriel Araujo</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>amcl</build_depend>
  <build_depend>base_local_planner</build_depend>
  <build_depend>base_local_planner</build_depend>
  <build_depend>move_base</build_depend>
  <build_depend>navfn</build_depend>
  <build_depend>roslaunch</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>xacro</build_depend>
  <run_depend>amcl</run_depend>
  <run_depend>base_local_planner</run_depend>
  <run_depend>move_base</run_depend>
  <run_depend>navfn</run_depend>
  <run_depend>roslaunch</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>

  <export>

  </export>
</package>
